sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:8: error: not found: value pluspetitQue
    if(!pluspetitQue(i-a,v)){
        ^